Fix z-index showing buttons that should not be shown

--- a/static/style.css
+++ b/static/style.css
@@ -317,7 +317,7 @@ input[type="checkbox"]:checked::before {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 2;
+    z-index: 15;
     transition: transform 0.5s;
 }
 
